--- a/guia01/primeraversion.html
+++ b/guia01/primeraversion.html
@@ -4,3 +4,5 @@ número de archivos de código fuente, es decir Git nos proporciona las
 herramientas para desarrollar un trabajo en equipo de manera inteligente y
 rápida y por trabajo nos referimos a algún software o página que implique
 código el cual necesitemos hacerlo con un grupo de personas”
+
+<p>Este es un cambio hecho por ayo para generar el primer conflicto</p>
