Cambio realizado en linea

--- a/guia01/primeraversion.html
+++ b/guia01/primeraversion.html
@@ -14,7 +14,9 @@
         rápida y por trabajo nos referimos a algún software o página que implique
         código el cual necesitemos hacerlo con un grupo de personas”
     </p>
-    <p>Fue creado por Linus Torvalds en 2005 (el mismo creador de Linux). Su principal función es rastrear cambios en archivos, permitiendo a los desarrolladores colaborar en proyectos de manera eficiente.</p>
-    <p>Este es un cambio hecho por ayo para generar el primer conflicto</p>
+    <p>Fue creado por Linus Torvalds en 2005 (el mismo creador de Linux). 
+        Su principal función es rastrear cambios en archivos, permitiendo a
+        los desarrolladores colaborar en proyectos de manera eficiente.</p>
+    
 </body>
 </html>
